--- a/src/py_pkg/package.xml
+++ b/src/py_pkg/package.xml
@@ -4,11 +4,12 @@
   <name>py_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="valentin@todo.todo">valentin</maintainer>
+  <maintainer email="todo@todo.com">todo</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
   <depend>example_interfaces</depend>
+  <depend>custom_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
