--- a/src/template_bringup/CMakeLists.txt
+++ b/src/template_bringup/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(ament_cmake REQUIRED)
 # endif()
 
 install(DIRECTORY
-  launch
+  launch config
   DESTINATION share/${PROJECT_NAME}/
 )
 
